fix screen bugs on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ color: #0097a7;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin: -105px auto 20px;
+	margin: -80px auto 20px;
 	transform: scale(0);
 	transition: transform .5s ease;
 	outline: none;
